# KinovaMultiArm

./: CMakeLists.txt
include/: KinovaManager.hpp  constants.hpp  kinova_manager.hpp  main.hpp  model_prediction.hpp  oml_mrtu.h  robot_manager.hpp  state_specification.hpp
src/: KinovaManager.cpp  constants.cpp  kinova_manager.cpp  main copy 2.cpp  main copy.cpp  main.cpp  model_prediction.cpp  oml_mrtu.cpp
